--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Alumno.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Alumno.html
@@ -8,23 +8,23 @@
 	</head>
 	<body>
 		<p class="cabecera2">
-			<span style="line-height: 1em; font-size: 1em;">El Imperio portugu&eacute;s&nbsp;</span></p>
+			El Imperio portugu&eacute;s&nbsp;</p>
 		<p class="normal">
-			Una de las principales potencias coloniales entre los siglos XIV y XVI fue la corona portuguesa. Este imperio logr&oacute; el estableciemiento de colonias en &Aacute;frica, Asia y Suram&eacute;rica.&nbsp;</p>
+			Una de las principales potencias coloniales entre los siglos XIV y XVI fue la Corona portuguesa. Este imperio logr&oacute; el estableciemiento de colonias en &Aacute;frica, Asia y Suram&eacute;rica.&nbsp;</p>
 		<p class="normal">
-			Entre 1415 y 1570 se da un proceso de exploraci&oacute;n costera (donde destaca el navegante Vasco da Gama, quien descubri&oacute; la ruta a la India y al Lejano Oriente) y establecimiento de peque&ntilde;os enclaves comerciales en Asia y Africa.&nbsp;</p>
+			Entre 1415 y 1570 se da un proceso de exploraci&oacute;n costera (donde destaca el navegante Vasco da Gama, quien descubri&oacute; la ruta a la India y al Lejano Oriente) y establecimiento de peque&ntilde;os enclaves comerciales en Asia y &Aacute;frica.&nbsp;</p>
 		<p class="normal">
-			Durante estos a&ntilde;os el imperio portugu&eacute;s fue muy exitoso y rentable, pero en 1580 la superioridad imperial espa&ntilde;ola se vio reflejada, ya que trono portugu&eacute;s fue dominado por los Habsburgo, dando lugar a la uni&oacute;n ib&eacute;rica y marcando el inicio del fin del gran imperio portugu&eacute;s del siglo XVI.</p>
+			Durante estos a&ntilde;os, el Imperio portugu&eacute;s fue muy exitoso y rentable, pero en 1580 la superioridad imperial espa&ntilde;ola se vio reflejada, ya que el trono portugu&eacute;s fue dominado por los Habsburgo, lo que propici&oacute; la uni&oacute;n ib&eacute;rica y marc&oacute; el inicio del fin del gran Imperio portugu&eacute;s del siglo XVI.</p>
 		<p class="cabecera2">
 			Pioneros en navegaci&oacute;n</p>
 		<p class="normal">
 			Los navegantes y mercaderes portugueses abrieron las principales rutas para el colonialismo europeo en el resto del planeta. Los portugueses fueron l&iacute;deres en la exploraci&oacute;n mar&iacute;tima entre los europeos por su larga tradici&oacute;n de pesca en alta mar.&nbsp;</p>
 		<p class="normal">
-			Enrique el Navegante inici&oacute; las incursiones hacia la costa occidental de &Aacute;frica en la mitad del siglo XV. El comercio de art&iacute;culos ex&oacute;ticos era el principal inter&eacute;s comercial de este monarca.</p>
+			Enrique el Navegante inici&oacute; en la mitad del siglo XV las incursiones hacia la costa occidental de &Aacute;frica. El comercio de art&iacute;culos ex&oacute;ticos era el principal inter&eacute;s comercial de este monarca.</p>
 		<p class="normal">
-			Los exploradores portugueses llegaron a las Indias Orientales (actual territorio de Indonesia) a principios del siglo XVI siguiendo las rutas fundadas por los comerciantes &aacute;rabes, atra&iacute;dos por la abundancia en canela, clavos y nuez moscada, productos que contaban con altos precios y una gran demanda en Europa.</p>
+			Los exploradores portugueses llegaron a las Indias Orientales (actual territorio de Indonesia) a principios del siglo XVI, siguiendo las rutas fundadas por los comerciantes &aacute;rabes, atra&iacute;dos por la abundancia de canela, clavos y nuez moscada, productos que ten&iacute;an altos precios y una gran demanda en Europa.</p>
 		<p class="normal">
-			Para controlar este comercio, los portugueses conquistaron las islas Molucas y se adue&ntilde;aron de muchos de los puertos ubicados estrategicamente en el Oc&eacute;ano &Iacute;ndico, estableciendo su dominio sobre rutas comerciales importantes y fundando enclaves que sirvieron como puntos de apoyo para los barcos y comerciantes alrededor de &Aacute;frica con el fin de asegurar el suministro y la protecci&oacute;n de sus barcos.</p>
+			Para controlar este comercio, los portugueses conquistaron las islas Molucas y se adue&ntilde;aron de muchos de los puertos ubicados estrat&eacute;gicamente en el oc&eacute;ano &Iacute;ndico, donde establecieron su dominio sobre rutas comerciales importantes y fundaron enclaves que sirvieron como puntos de apoyo para los barcos y comerciantes alrededor de &Aacute;frica, con el fin de asegurar el suministro y la protecci&oacute;n de sus naves.</p>
 		<p class="normal">
 			Los comerciantes portugueses llegaron incluso a China, donde abrieron rutas comerciales de gran importancia y crearon el enclave comercial de Macao, para dominar el comercio con este pa&iacute;s.&nbsp;</p>
 		<p class="cabecera2">
@@ -32,10 +32,10 @@
 		<p class="normal">
 			Desde &Aacute;frica, los portugueses extrajeron oro y traficaron con esclavos, que fueron enviados a trabajar en grandes plantaciones, en su mayor&iacute;a productoras de az&uacute;car. Estas primeras plantaciones aparecieron en la isla africana de Santo Tom&eacute;.</p>
 		<p class="normal">
-			A ra&iacute;z de varias revueltas de los esclavos en &Aacute;frica, hacia&nbsp;1570 los portugueses trasladaron las plantaciones a Suram&eacute;rica, en lo que hoy conocemos como Brasil. Ellos hab&iacute;an conquistado gran parte de ese territorio y transportaban esclavos africanos para que trabajaran all&iacute; (en agricultura y miner&iacute;a principalmente) dando inicio al comercio transatl&aacute;ntico de esclavos.</p>
+			A ra&iacute;z de varias revueltas de los esclavos en &Aacute;frica, hacia&nbsp;1570 los portugueses trasladaron las plantaciones a Suram&eacute;rica, en lo que hoy conocemos como Brasil. Ellos hab&iacute;an conquistado gran parte de ese territorio y transportaban esclavos africanos para que trabajaran all&iacute; (en agricultura y miner&iacute;a, principalmente), con lo que iniciaron el comercio transatl&aacute;ntico de esclavos.</p>
 		<p class="normal">
-			En su punto m&aacute;s alto, el siglo XVI, el imperio portugu&eacute;s no ten&iacute;a grandes extensiones de tierra colonizada como la corona espa&ntilde;ola, pero la ubicaci&oacute;n estrat&eacute;gica de puertos comerciales y plantaciones lo hacia un imperio muy rentable y eficiente.</p>
+			En su punto m&aacute;s alto, el siglo XVI, el Imperio portugu&eacute;s no ten&iacute;a grandes extensiones de tierra colonizada como la Corona espa&ntilde;ola, pero la ubicaci&oacute;n estrat&eacute;gica de puertos comerciales y plantaciones lo hacia un Imperio muy rentable y eficiente.</p>
 		<p class="normal">
-			Entre las posesiones m&aacute;s importantes del imperio portugu&eacute;s estaban Angola y Mozambique, las islas del Cabo Verde, Madeira y las Azores, las bases de Ormuz (Persia), Goa y Calcuta (India), Colombo (Sri Lanka), y enclaves comerciales en el Lejano Oriente como Macao (China) Java, Malaca y Nagasaki (Jap&oacute;n).</p>
+			Entre las posesiones m&aacute;s importantes del Imperio portugu&eacute;s estaban Angola y Mozambique, las islas del Cabo Verde, Madeira y las Azores, las bases de Ormuz (Persia), Goa y Calcuta (India), Colombo (Sri Lanka), y enclaves comerciales en el Lejano Oriente, como Macao (China), Java, Malaca y Nagasaki (Jap&oacute;n).</p>
 	</body>
 </html>
