--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Profesor.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -10,36 +10,46 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			Aproximar a los estudiantes a un contexto sobre otra de las potencias coloniales europeas: Portugal</p>
+			Interactivo que expone las principales caracter&iacute;sticas de la expansi&oacute;n territorial del Imperio de Portugal en el siglo XVI.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Aseg&uacute;rese de que sus estudiantes est&aacute;n familiarizados con el proceso del colonialismo y sus protagonistas principales.</p>
-		<p class="normal">
-			Puede abrir el ejercicio con las siguientes preguntas:</p>
+			Repase algunos de los conceptos claves de la &eacute;poca de las colonizaciones europeas. Es importante que los estudiantes conozcan el vocabulario para entender la actividad propuesta:</p>
 		<p class="tab1">
-			-&iquest;Qu&eacute; entiendes por colonialismo?</p>
+			- &iquest;Qu&eacute; entiendes por colonialismo?</p>
 		<p class="tab1">
-			-&iquest;Cu&aacute;ndo ocurri&oacute; este proceso?</p>
+			- &iquest;Cu&aacute;ndo ocurri&oacute; este proceso?</p>
 		<p class="tab1">
-			-&iquest;Qu&eacute; regiones de la tierra fueron colonizadas?</p>
+			- &iquest;Qu&eacute; regiones fueron colonizadas?</p>
 		<p class="tab1">
-			-&iquest;Qui&eacute;nes fueron las potencias colonizadoras?</p>
+			- &iquest;Qui&eacute;nes fueron las potencias colonizadoras?</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;les fueron los motivos de las expediciones colonizadoras?</p>
 		<p class="cabecera2">
 			Durante la presentaci&oacute;n</p>
 		<p class="normal">
-			Aseg&uacute;rese de resolver dudas o preguntas que puedan surgir en el transcurso de la presentaci&oacute;n.</p>
+			Antes de iniciar la actividad, invite a los estudiantes a ver el siguiente mapa <a href="http://hispanicasaber.planetasaber.com/encyclopedia/asp/Preview8.asp?IdPack=8&amp;IdPildora=000LKZ01" target="_blank">[VER]</a>. Preg&uacute;nteles qu&eacute; ven y qu&eacute; apreciaciones tienen del mapa referido. Puede comenzar su explicaci&oacute;n teniendo en cuenta el tratado de Tordesillas; recu&eacute;rdeles y enfat&iacute;celes a los estudiantes la importancia que este pacto tuvo en la historia colonial de Am&eacute;rica, y luego enfoque su explicaci&oacute;n en el papel que tuvo Portugal en el comercio y la apertura de rutas en Asia, &Aacute;frica y Am&eacute;rica.</p>
 		<p class="normal">
-			El tema central es que los estudiantes logren identificar a Portugal como otra de las potencias coloniales europeas</p>
+			N&aacute;rreles los hallazgos f&iacute;sicos que fueron haciendo los portugueses y qu&eacute; signific&oacute; para la Corona las expediciones en nuevos territorios. Para complementar esta informaci&oacute;n, utilice la Enciclopedia Hisp&aacute;nica y lea algunos enunciados que puedan complementar la informaci&oacute;n de esta presentaci&oacute;n <a href="http://hispanicasaber.planetasaber.com/encyclopedia/asp/Preview15.asp?IdPack=15&amp;IdPildora=5894063" target="_blank">[VER]</a>.</p>
 		<p class="normal">
-			Son dos los aspectos en los que el imperio portugu&eacute;s destac&oacute;: la apertura de nuevas rutas y el uso de esclavos en sus colonias.</p>
-		<p class="normal">
-			El imperio portugu&eacute;s tuvo su mayor momento de augue hacia el siglo XVI, pero en los siglos siguientes fue perdiendo poder y prestigio.</p>
+			Res&aacute;lteles a los estudiantes<span style="line-height: 1em; font-size: 1em;">&nbsp;los aportes de la cultura portuguesa y la vigencia que tuvieron en las islas atl&aacute;nticas, Brasil y el oc&eacute;ano &Iacute;ndico a trav&eacute;s de sus exploraciones.</span></p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Invite a sus estudiantes a que dise&ntilde;en un mapa conceptual con los principales contenidos revisados en la presentaci&oacute;n</p>
+			Tras la presentaci&oacute;n, haga que los estudiantes elaboren un texto con la informaci&oacute;n recogida durante la explicaci&oacute;n. Para ello, prop&oacute;ngales una serie de preguntas que permitan orientar el trabajo en clase:</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;les fueron las razones por las que el Imperio portugu&eacute;s logr&oacute; tener el &eacute;xito alcanzado en los territorios hallados?</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;l fue la importancia del catolicismo en los procesos de colonizaci&oacute;n portuguesa?</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;l era el motivo por el cual las nuevas rutas de comercio pretend&iacute;an alcanzar el monopolio de las especias?, &iquest;por qu&eacute; justamente las especias y no otras cosas, como las armas de fuego, productos de navegaci&oacute;n, entre otros?</p>
+		<p class="tab1">
+			- Explica cu&aacute;l fue la importancia de la esclavitud en los procesos de colonizaci&oacute;n portuguesa.</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; diferencias encuentras entre el proceso colonizador portugu&eacute;s respecto al de los espa&ntilde;oles, los ingleses y los franceses?</p>
+		<p class="normal">
+			Para finalizar, haga que los estudiantes compartan su texto escrito, y deles el tiempo suficiente para que puedan debatir en la clase las opiniones suscitadas por este argumento.</p>
 	</body>
 </html>
