--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso120/Alumno.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso120/Alumno.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
-	
-			
-</body>
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<p class="cabecera2">
+			La vida en Inglaterra durante el siglo XVI</p>
+		<p class="normal">
+			Durante el siglo XVI, Inglaterra vivi&oacute; una serie de cambios que afectar&iacute;an el resto de su historia y que sentar&iacute;an las bases de la naci&oacute;n que conocemos actualmente. Este periodo estuvo marcado por el gobierno de la familia Tudor, comenzando con Enrique VII a finales del siglo XV, pasando por Enrique XVIII, Mar&iacute;a I de Inglaterra e Isabel I de Inglaterra.</p>
+		<p class="normal">
+			La sociedad en la Inglaterra de los Tudor era principalmente rural y la poblaci&oacute;n viv&iacute;a en peque&ntilde;os pueblos subsistiendo gracias al trabajo de las granjas. Sin embargo, las ciudades comenzaron a crecer y a adquirir mayor importancia, de esta forma la industria y el comercio florecieron r&aacute;pidamente.</p>
+		<p class="cabecera3">
+			Enrique VIII de Inglaterra</p>
+		<p class="normal">
+			Enrique VIII rein&oacute; en Inglaterra desde 1509 hasta su muerte en 1547. Su reinado estuvo marcado por el hecho de haber tenido seis esposas, entre ellas, las m&aacute;s importantes, Catalina de Arag&oacute;n, Ana Bolena y Jane Seymour; con qui&eacute;nes tuvo a sus hijos Mar&iacute;a I, Isabel I y Eduardo VI, respectivamente. Los problemas con su primera esposa, Catalina de Arag&oacute;n, ocasionados por la imposibilidad de tener un hijo var&oacute;n que pudiera ser heredero al trono, llevaron a Enrique VIII a romper los lazos con Roma y a rechazar la autoridad del papa con el fin de anular su matrimonio. Con esta decisi&oacute;n, estableci&oacute; al monarca como jefe supremo de la Iglesia anglicana y orden&oacute; la disoluci&oacute;n de los monasterios. Adem&aacute;s de esto, Enrique VIII uni&oacute; a Gales con Inglaterra.</p>
+		<p class="cabecera3">
+			Mar&iacute;a I de Inglaterra</p>
+		<p class="normal">
+			Despu&eacute;s de la muerte de Enrique VIII, el heredero al trono Eduardo VI, subi&oacute; al poder con tan solo nueve a&ntilde;os, a causa de su fr&aacute;gil salud muri&oacute; seis a&ntilde;os despu&eacute;s de haber sido coronado rey. Su hermana Mar&iacute;a I de Inglaterra, hija de Enrique VIII y Catalina de Arag&oacute;n asumi&oacute; el poder. Dentro de las acciones m&aacute;s notables de su reinado est&aacute; la de abolir los decretos hechos por su padre en lo que respectaba a la relaci&oacute;n con la Iglesia de Roma y la autoridad del papa. Al instaurar de nuevo el catolicismo en Inglaterra, inici&oacute; una cruenta persecuci&oacute;n a los protestantes y las misas cat&oacute;licas fueron restauradas en 1553.</p>
+		<p class="cabecera3">
+			Isabel I</p>
+		<p class="normal">
+			Tras la muerte de su media hermana, Mar&iacute;a I, Isabel I fue coronada reina en 1558. Fue una reina querida por el pueblo, lo cual signific&oacute; un apoyo generalizado de la poblaci&oacute;n a las decisiones de car&aacute;cter religioso que tom&oacute; para Inglaterra. Nunca contrajo matrimonio y tampoco tuvo descendencia a pesar de las constantes peticiones del parlamento para que lo hiciera, esto fortaleci&oacute; su imagen e hizo que se creara un culto alrededor de su figura que se vio reflejado en el arte y la literatura de la &eacute;poca.<br />
+			Se dice que Isabel I trajo estabilidad religiosa a Inglaterra pues restableci&oacute; el protestantismo y se separ&oacute; de la Iglesia de Roma, convirti&eacute;ndose as&iacute; en la m&aacute;xima autoridad de la Iglesia de Inglaterra.</p>
+		<p class="cabecera3">
+			Sociedad y econom&iacute;a durante el siglo XVI en Inglaterra</p>
+		<p class="normal">
+			El siglo XVI represent&oacute; el fortalecimiento de la monarqu&iacute;a en Inglaterra, as&iacute; la figura del rey y la reina fueron tomando a&uacute;n m&aacute;s fuerza dentro de la poblaci&oacute;n.</p>
+		<p class="normal">
+			Durante la dinast&iacute;a de los Tudor, la sociedad estaba organizada en cuatro grupos sociales. El primer grupo social, y el m&aacute;s poderoso, era la nobleza, que pose&iacute;a grandes extensiones de tierra. Debajo de ellos estaba la aristocracia y los comerciantes ricos, que eran caballeros que tambi&eacute;n eran propietarios de tierras y generalmente eran educados y de buena familia. El siguiente estaba dividido en dos, los propietarios rurales y los artesanos; los primeros pose&iacute;an sus propias tierras y pod&iacute;an poseer tantas riquezas como los arist&oacute;cratas, pero trabajaban junto a sus hombres. Finalmente, se encontraban los arrendatarios de tierras que alquilaban los terrenos de personas adineradas. A pesar de esta separaci&oacute;n de clases sociales, para un hombre del siglo XVI era posible ascender socialmente.</p>
+		<p class="cabecera3">
+			La posici&oacute;n de Inglaterra ante la colonizaci&oacute;n</p>
+		<p class="normal">
+			Si bien la industrial textil inglesa exportaba anualmente 100.000 piezas de tejido de lana, y la flota inglesa no ten&iacute;a una base s&oacute;lida como la portuguesa o la espa&ntilde;ola; fue solo hasta la mitad del siglo XVI que los navegadores ingleses comenzaron a realizar empresas para abrir un pasaje por el norte hacia el oc&eacute;ano &Iacute;ndico. Fue as&iacute; que en 1555 fundaron una compa&ntilde;&iacute;a que estableci&oacute; relaciones comerciales con el imperio de Mosc&uacute; y permiti&oacute; de esta forma que este estado iniciara a tomar poder en la econom&iacute;a atl&aacute;ntica. Ya posteriormente, los ingleses se dedicaron de lleno a la pirater&iacute;a, interceptando y saqueando las tripulaciones espa&ntilde;olas que ataban Espa&ntilde;a de Am&eacute;rica. El m&aacute;s disting&uuml;ido de los piratas ingleses es Sir Francis Drake quien en tres a&ntilde;os logr&oacute; circunnavegar el entero globo terr&aacute;queo emulando la ruta ya recorrida por Magallanes. Gracias a esto, los ingleses reforzaron su presencia en el mar B&aacute;ltico, a tener apariciones importantes en el Mediterr&aacute;neo y a prepararse, en el siglo XVII, para llegar a colonizar el noroeste de los Estados Unidos.</p>
+		<p class="cabecera3">
+			La Iglesia nacional inglesa</p>
+		<p class="normal">
+			La instauraci&oacute;n del calvinismo en Inglaterra resale hacia los a&ntilde;os de 1545 y 1560, periodo en el cual la Iglesia inglesa ya hab&iacute;a iniciado a tomar un camino completamente diferente y alejado respecto al resto de las iglesias europeas. Fue hacia 1527 con Enrique VIII quien solicit&aacute;ndole el anulamiento de su propio matrimonio con Catalina de Arag&oacute;n. El papa Clemente VII se rehus&oacute; en acatar esta solicitud y esta cuesti&oacute;n se fue arrastrando hasta cuando el mandatario llev&oacute; su solicitud al parlmaneto para obtener lo que el papa le hab&iacute;a denegado. Fue as&iacute; como Enrique VIII se fue adue&ntilde;ando de la Iglesia inglesa, nacionalizando sus bienes, transformando los obispos en funcionarios del estado y absolviendo los monasterios.</p>
+		<p class="normal">
+			Este distanciamiento ocasion&oacute; la creaci&oacute;n de la Iglesia nacional que, adem&aacute;s de la ruptura con Roma, no simpatizaba con el luteranismo.</p>
+	</body>
 </html>
