--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso120/Profesor.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso120/Profesor.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
-	
-			
-</body>
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<p class="cabecera1">
+			Objetivo</p>
+		<p class="normal">
+			La siguiente secuencia de im&aacute;genes presenta las transformaciones que se dieron en la Inglaterra del siglo XVI a nivel pol&iacute;tico, social y econ&oacute;mico.</p>
+		<p class="cabecera1">
+			Propuesta</p>
+		<p class="cabecera2">
+			Antes de la presentaci&oacute;n</p>
+		<p class="normal">
+			Antes de mostrar la secuencia de im&aacute;genes, proponga a sus estudiantes las siguientes preguntas para contextualizarlos en el argumento de la actividad:</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;l era la situaci&oacute;n pol&iacute;tica de Inglaterra en el siglo XVI?</p>
+		<p class="tab1">
+			- &iquest;C&oacute;mo eran las relaciones pol&iacute;ticas de los ingleses con el resto de los estados europeos?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; religi&oacute;n profesaban los ingleses?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; concepci&oacute;n ten&iacute;an los ingleses de la colonizaci&oacute;n?</p>
+		<p class="tab1">
+			-&iquest; Qu&eacute; nociones tienes acerca de los procesos de colonizaci&oacute;n de Inglaterra?, &iquest;qu&eacute; lugares lograron colonizar y conquistar?</p>
+		<p class="cabecera2">
+			Despu&eacute;s de la presentaci&oacute;n</p>
+		<p class="normal">
+			Al finalizar su explicaci&oacute;n haga las siguientes preguntas a sus estudiantes:</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; piensas del hecho que Enrique VIII haya decidido crear un Iglesia nacional?, &iquest;qu&eacute; consecuencias habr&aacute; tenido a nivel social Inglaterra luego de esta decisi&oacute;n?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; pasar&iacute;a si en la actualidad un presidente o un monarca decidiera separarse completamente del pensamiento dogm&aacute;tico de Roma?, &iquest;crees que tendr&iacute;a la misma trascendencia de la que tuvo para la &eacute;poca la decisi&oacute;n de Enrique VIII?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; papel cumpli&oacute; Inglaterra en la econom&iacute;a del siglo VIII?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; diferencias sociales encuentras entre las situaciones internas de los estados de Portugal, Espa&ntilde;a e Inglaterra?</p>
+		<p class="normal">
+			Luego de haberlos escuchado, prop&oacute;ngales que escriban un resumen en su cuaderno donde condensen las ideas y los conceptos m&aacute;s importantes de la exposici&oacute;n.</p>
+	</body>
 </html>
