--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso150/Profesor.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso150/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -10,28 +10,50 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			Con la presentaci&oacute;n se busca que los estudiantes tengan una referencia sint&eacute;tica de qui&eacute;nes fueron los hugonotes y cu&aacute;l fue su importancia en la historia de Francia y posteriormente en la colonizaci&oacute;n de Am&eacute;rica.</p>
+			Con la presentaci&oacute;n se busca que los estudiantes tengan una referencia sint&eacute;tica del desarrollo colonial franc&eacute;s y c&oacute;mo este permiti&oacute; el comercio de Francia.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Introduzca la presentaci&oacute;n record&aacute;ndole a los estudiantes en qu&eacute; consisti&oacute; la reforma luterana en Alemania, para establecer una conexi&oacute;n con la reforma impulsada por Juan Calvino en Francia.&nbsp;</p>
+			Introduzca la presentaci&oacute;n record&aacute;ndole a los estudiantes las etapas de la colonizaci&oacute;n europea en Am&eacute;rica y los intereses de las potencias europeas por expandir sus territorios en ultramar.</p>
+		<p class="normal">
+			Formule preguntas que busquen generar reflexi&oacute;n, como:</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;l era la situaci&oacute;n econ&oacute;mica de Europa a finales del siglo XV?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; importancia ten&iacute;a la tierra y, por consiguiente, la acumulaci&oacute;n de territorios, para el desarrollo de la inestable econom&iacute;a europea?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; problem&aacute;ticas enfrentaban los Estados mon&aacute;rquicos europeos al no poder comerciar sus productos por la ausencia de mercados?</p>
+		<p class="tab1">
+			- &iquest;De qu&eacute; manera pod&iacute;a beneficiar a la poblaci&oacute;n francesa salir de su pa&iacute;s, donde escaseaba la tierra y aumentaba la pobreza, hacia rutas desconocidas en el nuevo continente americano?</p>
 		<p class="cabecera2">
 			Durante la presentaci&oacute;n</p>
 		<p class="normal">
-			Permita que los estudiantes observen las diapositivas e intervenga para aclarar dudas y ampliar la informaci&oacute;n en caso necesario.</p>
+			Permita que los estudiantes observen las diapositivas e intervenga para aclarar dudas y ampliar la informaci&oacute;n en caso necesario. Intervenga con preguntas que busquen recuperar informaci&oacute;n del tipo:</p>
+		<p class="tab1">
+			- &iquest;Por qu&eacute; inicialmente Francia no estuvo interesada en expandirse territorialmente?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; llev&oacute; a los franceses a abandonar las primeras expediciones y fundaciones en Norteam&eacute;rica?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; influencia tuvo la naciente burgues&iacute;a francesa en la expansi&oacute;n territorial en Am&eacute;rica?</p>
+		<p class="tab1">
+			- &iquest;Por qu&eacute; el mar Caribe se convirti&oacute; en un escenario propicio para el enfrentamiento miliar imperial?</p>
+		<p class="tab1">
+			- &iquest;En qu&eacute; medida la esclavitud fue la base del enriquecimiento franc&eacute;s del siglo XVIII?</p>
+		<p class="tab1">
+			- &iquest;Por qu&eacute; la pirater&iacute;a fue fomentada por la Corona francesa?</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Al finalizar la presentaci&oacute;n, p&iacute;dale a los estudiantes que en grupos investiguen y analicen las consecuencias del exilio de los protestantes a Am&eacute;rica, enfocados en aspectos como:</p>
+			Al finalizar la presentaci&oacute;n, p&iacute;dale a los estudiantes que, en grupos, investiguen y analicen las consecuencias de la colonizaci&oacute;n francesa en Am&eacute;rica, enfocados en aspectos como:</p>
 		<p class="tab1">
-			- La esclavitud de los pueblos abor&iacute;genes.</p>
+			- El aprovechamiento de los pueblos abor&iacute;genes.</p>
 		<p class="tab1">
-			- La explotaci&oacute;n de los recursos con base en mano de obra esclava ind&iacute;gena.</p>
+			- La explotaci&oacute;n de los recursos con base en mano de obra esclava ind&iacute;gena y negra.</p>
 		<p class="tab1">
 			- El comercio desde Am&eacute;rica, que benefici&oacute; exclusivamente a Europa.</p>
 		<p class="tab1">
-			- Las confrontaciones armadas en Am&eacute;rica.</p>
+			- Los enfrentamientos entre Francia, Inglaterra y Espa&ntilde;a, que tuvieron como escenario el Caribe.</p>
 	</body>
 </html>
