--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Principal.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso080/Principal.html
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title>El Imperio Portugués en el siglo XVI</title>
+    <title>El Imperio portugués en el siglo XVI</title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
