--- a/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso150/Principal.html
+++ b/fuentes/visuales/grado07/guion05/guionAbierto/CS_07_05_CO_Recurso150/Principal.html
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title>La Francia hugonota </title>
+    <title>La Francia imperial</title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
